[package]
name = "traffic-boar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features=["rustls"] }
awc = "3.4.0"
reqwest = "0.12.1"
actix-rt = "2.9.0"
rustls = "=0.20.9"
actix-proxy = "0.2.0"
config = "0.13"
serde = { version = "1", features = ["derive" ]}
urlencoding = "2.1.3"
